Fix button focus
Still can't do hover + focus :(

--- a/test/demo.html
+++ b/test/demo.html
@@ -5,7 +5,7 @@
 <h1>Odd</h1>
 <h1 data-color="red">I am red</h1>
 <button>Click me</button>
-<!--<script>
+<script>
     // when the DOM is updated (ex.: new elements created), styles update automatically.
     document.querySelector("button").addEventListener("mousedown", () => {
         let li = document.createElement("li");
@@ -13,7 +13,7 @@
         document.querySelector("ul").appendChild(li);
     });
 </script>
-<ul></ul>-->
+<ul></ul>
 <script>
     // Apply styles & set up auto-update after window has loaded.
     window.addEventListener("load", RSS.initialize);
