Prevent update if window not yet loaded

--- a/test/demo.html
+++ b/test/demo.html
@@ -15,8 +15,8 @@
 </script>
 <ul></ul>
 <script>
-    // Apply styles & set up auto-update after window has loaded.
-    window.addEventListener("load", RSS.initialize);
+    // Apply styles & set up auto-update.
+    RSS.initialize();
 
     RSS.setProps({
         evenBG: "black",
