--- a/test/demo.html
+++ b/test/demo.html
@@ -14,4 +14,5 @@
     });
 </script>
 <ul></ul>
+<div id="resizable">Resize this window to change my color!</div>
 <script src="./style.js"></script>
