Create printing state

--- a/test/demo.html
+++ b/test/demo.html
@@ -15,4 +15,5 @@
 </script>
 <ul></ul>
 <div id="resizable">Resize this window to change my color!</div>
+<div class="noprint">DO NOT PRINT THIS CONTENT</div>
 <script src="./style.js"></script>
